--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "burlesque": "bin/burlesque"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install"
+    "postinstall": "./node_modules/.bin/bower install && ./bin/compile"
   },
   "dependencies": {
     "optimist": "0.6.1",
@@ -30,9 +30,11 @@
     "minilog": "2.0.4",
     "bower": "1.3.1",
     "jade": "1.3.0",
-    "stylus": "0.42.3"
+    "stylus": "0.42.3",
+    "coffee-script": "^1.7.1"
   },
   "devDependencies": {
-    "nodemon": "1.0.17"
+    "nodemon": "1.0.17",
+    "coffeelint": "^1.5.2"
   }
 }
