--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   "dependencies": {
     "optimist": "0.6.1",
     "reveal.js": "2.6.2",
-    "express": "3.5.1",
-    "minilog": "2.0.4",
-    "bower": "1.3.1",
-    "jade": "1.3.0",
-    "stylus": "0.42.3",
-    "coffee-script": "^1.7.1"
+    "express": "4.10.1",
+    "minilog": "2.0.6",
+    "bower": "1.3.12",
+    "jade": "1.7.0",
+    "stylus": "0.49.2",
+    "coffee-script": "1.8.0"
   },
   "devDependencies": {
-    "nodemon": "1.0.17",
-    "coffeelint": "^1.5.2"
+    "nodemon": "1.2.1",
+    "coffeelint": "1.6.1"
   }
 }
